add higher-lower summary screen

--- a/higher-lower/index.html
+++ b/higher-lower/index.html
@@ -26,6 +26,7 @@
             <a href="../pokedex">Pokedex</a>
             <a href="../pokedoku">Pokedoku</a>
             <a href="../higher-lower" class="active">Higher/ Lower</a>
+            <a href="../supereffective">Super Effective</a>
             <a href="../whos-that-pokemon">Who's That Pokemon?</a>
         </nav>
         <div class="info">
@@ -60,13 +61,13 @@
                     <div class="radio-title">Difficulty</div>
                     <div class="options">
                         <input type="radio" value="0" name="difficulty" id="difficulty0">
-                        <label for="difficulty0">Easy</label>
+                        <label for="difficulty0" class="easy">Easy</label>
                         <input type="radio" value="1" name="difficulty" id="difficulty1">
-                        <label for="difficulty1">Medium</label>
+                        <label for="difficulty1" class="medium">Medium</label>
                         <input type="radio" value="2" name="difficulty" id="difficulty2">
-                        <label for="difficulty2">Hard</label>
+                        <label for="difficulty2" class="hard">Hard</label>
                         <input type="radio" value="3" name="difficulty" id="difficulty3">
-                        <label for="difficulty3">Expert</label>
+                        <label for="difficulty3" class="expert">Expert</label>
                     </div>
                     <hr>
                     <div>
