--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -26,6 +26,7 @@
             <a href="../pokedex" class="active">Pokedex</a>
             <a href="../pokedoku">Pokedoku</a>
             <a href="../higher-lower">Higher/ Lower</a>
+            <a href="../supereffective">Super Effective</a>
             <a href="../whos-that-pokemon">Who's That Pokemon?</a>
         </nav>
         <div class="info">
