--- a/higher-lower/summary/index.html
+++ b/higher-lower/summary/index.html
@@ -18,6 +18,44 @@
     <noscript>
         <p>Please enable javascript to use this site.</p>
     </noscript>
-    
+    <header>
+        <div class="logo">
+            <img src="../../img/logo.png" alt="logo">
+        </div>
+        <nav>
+            <a href="../../pokedex">Pokedex</a>
+            <a href="../../pokedoku">Pokedoku</a>
+            <a href="../../higher-lower" class="active">Higher/ Lower</a>
+            <a href="../../supereffective">Super Effective</a>
+            <a href="../../whos-that-pokemon">Who's That Pokemon?</a>
+        </nav>
+        <div class="info">
+            <img src="../../img/info.png" alt="info">
+        </div>
+    </header>
+    <div class="content">
+        <div class="summary">
+            <div class="title red">Summary</div>
+            <div class="content-container">
+                <div class="info">
+                    <div id="seed"></div>
+                </div>
+                <div class="info three">
+                    <div id="points"></div>
+                    <span class="vline"></span>
+                    <div id="difficulty"></div>
+                    <span class="vline"></span>
+                    <div id="levels"></div>
+                </div>
+                <div class="info two">
+                    <div id="streak"></div>
+                    <span class="vline"></span>
+                    <div id="fastest"></div>
+                </div>
+            </div>
+            <div class="title blue">Answers</div>
+            <div id="answers" class="content-container"></div>
+        </div>
+    </div>
 </body>
 </html>
