--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -6,6 +6,7 @@
     <title>Pokedex</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/pokedex.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js" integrity="sha512-FwWaT/y9ajd/+J06KL9Fko1jELonJNHMUTR4nGP9MSIq4ZdU2w9/OiLxn16p/zEOZkryHi3wKYsnWPuADD328Q==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="../js/pokedata-min.js" defer></script>
     <script src="../js/reference-data.js" defer></script>
     <script src="../js/main.js" defer></script>
@@ -34,6 +35,7 @@
         </div>
     </header>
     <div id="content" class="content">
+        <input type="text" id="searchbar" class="searchbar" onkeyup="searchPokemon()"></input>
         <div id="pkmnContainer" class="pkmn-container"></div>
         <div id="navigation" class="navigation"></div>
         <div class="side-button-container back">
