consistency fixes and higher-lower timer

--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pokedex.css">
+    <link rel="stylesheet" href="pokedex.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js" integrity="sha512-FwWaT/y9ajd/+J06KL9Fko1jELonJNHMUTR4nGP9MSIq4ZdU2w9/OiLxn16p/zEOZkryHi3wKYsnWPuADD328Q==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="../js/pokedata-min.js" defer></script>
     <script src="../js/reference-data.js" defer></script>
     <script src="../js/main.js" defer></script>
-    <script src="../js/pokedex.js" defer></script>
+    <script src="pokedex.js" defer></script>
     <noscript>
         <meta http-equiv="refresh" content="1">
     </noscript>
