--- a/higher-lower/summary/index.html
+++ b/higher-lower/summary/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Higher/Lower</title>
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/higher-lower.css">
+    <link rel="stylesheet" href="../higher-lower.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" integrity="sha512-+Ru50BzEpZjlFzVnjSmJfYFPFfY2hS0Kjlu/IvqaJoux7maF5lJrRVUJWJ2LevPls7rd242GLbWEt+zAo4OVVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="../../js/pokedata-min.js" defer></script>
     <script src="../../js/main.js" defer></script>
-    <script src="../../js/higher-lower-summary.js" defer></script>
+    <script src="higher-lower-summary.js" defer></script>
     <noscript>
         <meta http-equiv="refresh" content="1">
     </noscript>
