--- a/higher-lower/summary/index.html
+++ b/higher-lower/summary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Higher/Lower</title>
+    <title>Higher/Lower | pkmnArcade</title>
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="../higher-lower.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" integrity="sha512-+Ru50BzEpZjlFzVnjSmJfYFPFfY2hS0Kjlu/IvqaJoux7maF5lJrRVUJWJ2LevPls7rd242GLbWEt+zAo4OVVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
@@ -26,7 +26,7 @@
             <a href="../../pokedex">Pokedex</a>
             <a href="../../pokedoku">Pokedoku</a>
             <a href="../../higher-lower" class="active">Higher/ Lower</a>
-            <a href="../../supereffective">Super Effective</a>
+            <a href="../../super-effective">Super Effective</a>
             <a href="../../whos-that-pokemon">Who's That Pokemon?</a>
         </nav>
         <div class="info">
