--- a/whos-that-pokemon/index.html
+++ b/whos-that-pokemon/index.html
@@ -1,3 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv='refresh' content='0; URL=pokedex'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Who's That Pokemon? | pkmnArcade</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="whos-that-pokemon.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js" integrity="sha512-FwWaT/y9ajd/+J06KL9Fko1jELonJNHMUTR4nGP9MSIq4ZdU2w9/OiLxn16p/zEOZkryHi3wKYsnWPuADD328Q==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="../js/pokedata-min.js" defer></script>
+    <script src="../js/reference-data.js" defer></script>
+    <script src="../js/main.js" defer></script>
+    <script src="whos-that-pokemon.js" defer></script>
+    <noscript>
+        <meta http-equiv="refresh" content="1">
+    </noscript>
 </head>
+<body>
+    <noscript>
+        <p>Please enable javascript to use this site.</p>
+    </noscript>
+    <header>
+        <div class="logo">
+            <img src="../img/logo.png" alt="logo">
+        </div>
+        <nav>
+            <a href="../pokedex">Pokedex</a>
+            <a href="../pokedoku">Pokedoku</a>
+            <a href="../higher-lower">Higher/ Lower</a>
+            <a href="../super-effective">Super Effective</a>
+            <a href="../whos-that-pokemon" class="active">Who's That Pokemon?</a>
+        </nav>
+        <div class="info">
+            <img src="../img/info.png" alt="info">
+        </div>
+    </header>
+    <div id="content">
+
+    </div>
+
+
+</body>
+</html>
